--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.9.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.21",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
